This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
11/25/20: Fixed problem with using the current probe mode or alpha for
assessing whether focus calibration exists in Low Dose; used Focus area values
instead (In 3.8).

11/25/20: SEM_3-9-0beta1
11/24/20: Added support for HDF files.

11/24/20: Added property JeolBeamRampupTimeout to allow beam to be turned on
from within SerialEM on systems with rampup problem.

11/24/20: Fixed reordering of montage Z coordinates for dose-symmetric series,
in case that should ever happen (In 3.8).

11/23/20: Added property NoScopeControlOnStartup to work around a problem in
JEOL software when program starts with beam ramping up (In 3.8).

11/23/20: Stopped turning off beam when program crashes (In 3.8).

11/23/20: Fixed crash when autocentering beam with parameters from a higher
spot size (In 3.8).

11/22/20: Fixed SnapshotToFile command with first value 0 (In 3.8).

11/22/20: Made it possible to pick Navigator points on an overlay made from
two imported maps (In 3.8).

11/21/20: Fixed crash adding float image to tilt series mini-stack (In 3.8).

11/21/20: Fixed divide by 0 crash when using "Test Acquire" in beam
autocenter (In 3.8).

11/16/20: Made Settings - Set a Property show the current value and print the
new value to the log (In 3.8).

11/14/20: Added ability to define a set of lens changes for normalizing lenses
on a JEOL.

11/14/20: Added Navigator option (in Options menu) to incorporate the label
into names of files to be opened instead of adding sequential numbers when
new names are generated automatically.

11/12/20: Added property to add some text after "SerialEM" in the title bar.

11/12/20: Added hot keys to toggle "Extra info" and crosshairs in the
display.
